--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+app-root {
+    display: -ms-flex;
+    display: flex;
+    min-height: 100vh;
+    -ms-flex-direction: column;
+    flex-direction: column;
+  }
+main {
+    -ms-flex: 1 0 auto;
+    flex: 1 0 auto;
+}
