--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,20 @@
+<!-- Plantilla de navbar responsiva con materialize -->
 <nav>
     <div class="nav-wrapper">
         <a href="#" class="brand-logo center">Logo</a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="left hide-on-med-and-down">
             <li><a href="home">Home</a></li>
+            <li><a href="regprofe">Registro Profesores</a></li>
+            <li><a href="regalumno">Registro Alumnos</a></li> 
+            <li><a href="login">Ingresar</a></li>
         </ul>
       </div>
 </nav>
 
 <ul class="sidenav" id="mobile-demo">
     <li><a href="home">Home</a></li>
+    <li><a href="regprofe">Registro Profesores</a></li>
+     <li><a href="regalumno">Registro Alumnos</a></li>
+     <li><a href="login">Ingresar</a></li>
 </ul>
