--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,15 +1,16 @@
 <!-- Plantilla de navbar responsiva con materialize -->
 <nav>
     <div class="nav-wrapper">
-        <a href="#" class="brand-logo center">
+        <a href="#" class="brand-logo ">
             <img src="assets/logokids.png">
         </a>
         <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-        <ul id="nav-mobile" class="left hide-on-med-and-down">
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
             <li><a href="home">Home</a></li>
             <li><a href="regprofe">Registro Profesores</a></li>
             <li><a href="regalumno">Registro Alumnos</a></li> 
             <li><a href="login">Ingresar</a></li>
+            <li><a href="cursosAlumno">CursosAlum</a></li>
         </ul>
       </div>
 </nav>
@@ -19,4 +20,5 @@
     <li><a href="regprofe">Registro Profesores</a></li>
      <li><a href="regalumno">Registro Alumnos</a></li>
      <li><a href="login">Ingresar</a></li>
+     <li><a href="cursosAlumno">CursosAlum</a></li>
 </ul>
