--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -1,11 +1,34 @@
 .brand-logo img {
-    height: 60px;
+   height: 100px;
+} 
+
+.brand-logo{
+    margin-left: 50px;
+    /* padding-left: 20px; */
+    padding-top: 10px;
 }
 
 .nav-wrapper {
-	background-image: url("https://i.pinimg.com/originals/e1/9f/c4/e19fc4f92bc65978ceac0213a1abaf65.gif");
+	/* background-image: url("https://i.pinimg.com/originals/e1/9f/c4/e19fc4f92bc65978ceac0213a1abaf65.gif"); */
     /*background-color: #008547 !important;*/
-    font-size: 14px;
+    /* font-size: 60px; */
     font-weight: bold;
-    }
+    height: 190%;
+    /* font-family: 'Fredoka One', cursive; */
+}
+
+.nav-wrapper ul li a{
+    font-family: 'Fredoka One', cursive;
+    color: #212121;
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 25px;
+    /* padding-top: 25px; */
+    /* padding-bottom: 10px; */
+}
+
+.nav-wrapper ul li a i{
+    float: left;
+    padding-right: 8px;
+}
     
