Corregido conflicto con boostrap, iniciando pagina cursos profesores

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!-- Plantilla de navbar responsiva con materialize -->
-<nav>
+<nav class="mb60">
     <div class="nav-wrapper yellow lighten-2">
         <a href="#" class="brand-logo ">
             <img src="assets/logokids.png">
