Comprobación de visualización de página principal

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,3 +1,4 @@
+
 <!-- Plantilla de navbar responsiva con materialize -->
 <nav class="mb60">
     <div class="nav-wrapper yellow lighten-2">
@@ -19,6 +20,7 @@
 <!-- Dropdown Structure -->
 <ul id="dropdown2" class="dropdown-content">
     <li><a href="regprofe">Profesores</a></li>
+    <li class="divider" tabindex="-1"></li>
     <li><a href="regalumno">Alumnos</a></li>
 </ul>
 
