--- a/src/app/pages/curso-vista/curso-vista.component.css
+++ b/src/app/pages/curso-vista/curso-vista.component.css
@@ -108,3 +108,10 @@ a.btn-card {
     text-decoration: none;
     color: #fff;
 }
+
+h3 { text-shadow: 4px 3px 0px rgb(166, 204, 214), 9px 8px 0px rgba(83, 137, 168, 0.548); 
+    color: rgb(6, 178, 247); 
+    font-family: Comic Sans; 
+    font-size:x-large;
+    text-align: center;
+}
